# Q4-Hackathon2-P2

./: README.md
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_create_todo_table.py
backend/app/: config.py  database.py  main.py
backend/app/dependencies/: auth.py
backend/app/models/: todo.py
backend/app/routers/: auth.py  todos.py
backend/app/schemas/: __init__.py  common.py  todo.py
backend/app/utils/: exceptions.py
